--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-json-pretty": "^2.2.0",
+    "react-loading-skeleton": "^2.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
